# app/kartlegging-api/src/api/mod.rs
@@ -1,18 +1,11 @@
 pub(crate) mod docs;
 pub(crate) mod kartlegging;
-pub(crate) mod oversikt;
 
 use crate::api::docs::api_docs_routes;
-use crate::api::kartlegging::finn_kartlegging;
-use crate::api::oversikt::finn_oversikt;
-use crate::model::state::RouterState;
-use axum::routing::post;
+use crate::api::kartlegging::kartlegging_routes;
 use axum::Router;
-use axum_health::paw_tracing::add_otel_trace_layer;
 use health_and_monitoring::simple_app_state::AppState;
-use paw_oauth2_resource_server::middleware::oauth2_middleware;
 use paw_oauth2_resource_server::state::AuthState;
-use paw_otel_tracing::otel_middleware::otel_middleware;
 use sqlx::PgPool;
 use std::sync::Arc;
 
@@ -23,19 +16,7 @@ pub fn build_router(
 ) -> Router {
     let health_routes = axum_health::routes(app_state);
     let docs_routes = api_docs_routes();
+    let kartlegging_routes = kartlegging_routes(pg_pool, auth_state);
 
-    let oversikt_routes =
-        add_otel_trace_layer(Router::new().route("/api/v1/oversikt", post(finn_oversikt)))
-            .route_layer(oauth2_middleware(auth_state.clone()))
-            .with_state(RouterState::new(pg_pool.clone()));
-    let kartlegging_routes = Router::new()
-        .route("/api/v1/kartlegging", post(finn_kartlegging))
-        .route_layer(otel_middleware())
-        .route_layer(oauth2_middleware(auth_state.clone()))
-        .with_state(RouterState::new(pg_pool.clone()));
-
-    health_routes
-        .merge(docs_routes)
-        .merge(oversikt_routes)
-        .merge(kartlegging_routes)
+    health_routes.merge(docs_routes).merge(kartlegging_routes)
 }
