# app/kartlegging-api/src/api/oversikt.rs
@@ -1,57 +1,0 @@
-use crate::logic::query::finn_for_identitetsnummer::finn_for_identitetsnummer;
-use crate::logic::query::finn_for_tilknyttet_kontor::finn_for_tilknyttet_kontor;
-use crate::model::dto::request::QueryRequest;
-use crate::model::dto::response::OversiktResponse;
-use crate::model::state::RouterState;
-use axum::extract::State;
-use axum::Json;
-use paw_error_handling::problem_details::ProblemDetails;
-
-#[tracing::instrument(skip(state, request), fields(arbeidssoekere_count))]
-pub(crate) async fn finn_oversikt(
-    State(state): State<RouterState>,
-    request: String,
-) -> anyhow::Result<Json<OversiktResponse>, ProblemDetails> {
-    const PATH: &str = "/api/v1/kartlegging";
-    let query_request: QueryRequest = serde_json::from_str(&request).map_err(|e| {
-        tracing::error!("Feil ved deserialisering av request body: {}", e);
-        ProblemDetails::validation_error(PATH.to_string(), "Ugyldig request body".to_string())
-    })?;
-
-    let mut tx = state.pg_pool.begin().await.map_err(|e| {
-        tracing::error!("Kunne ikke starte transaksjon: {}", e);
-        ProblemDetails::database_error(PATH.to_string(), "Transaksjon feilet".to_string())
-    })?;
-
-    let response = match query_request {
-        QueryRequest::Identitetsnummer(query) => {
-            query
-                .validate()
-                .map_err(|e| ProblemDetails::validation_error(PATH.to_string(), e.to_string()))?;
-            finn_for_identitetsnummer(&mut tx, &query)
-                .await
-                .map_err(|e| {
-                    tracing::error!("Feil ved spørring: {}", e);
-                    ProblemDetails::database_error(PATH.to_string(), "Spørring feilet".to_string())
-                })?
-        }
-        QueryRequest::TilknyttetKontor(query) => {
-            query
-                .validate()
-                .map_err(|e| ProblemDetails::validation_error(PATH.to_string(), e.to_string()))?;
-            finn_for_tilknyttet_kontor(&mut tx, &query)
-                .await
-                .map_err(|e| {
-                    tracing::error!("Feil ved spørring: {}", e);
-                    ProblemDetails::database_error(PATH.to_string(), "Spørring feilet".to_string())
-                })?
-        }
-    };
-
-    tx.commit().await.map_err(|e| {
-        tracing::error!("Kunne ikke commite transaksjon: {}", e);
-        ProblemDetails::database_error(PATH.to_string(), "Transaksjon feilet".to_string())
-    })?;
-    tracing::Span::current().record("arbeidssoekere_count", response.arbeidssoekere.len());
-    Ok(Json(response))
-}
