# app/kartlegging-api/src/model/dao/mod.rs
@@ -1,5 +1,3 @@
 pub(crate) mod arbeidssoekere;
-pub(crate) mod arbeidssoekere_v2;
 pub(crate) mod kontortilknytninger;
 pub(crate) mod ledighetsperioder;
-pub(crate) mod tilknyttet_kontor;
