# app/kartlegging-api/src/model/dto/mod.rs
@@ -1,5 +1,4 @@
 pub mod arbeidssoeker;
-pub mod arbeidssoeker_v2;
 pub mod bekreftelse;
 pub mod egenvurdering;
 pub mod kontor;
@@ -9,4 +8,3 @@ pub mod periode;
 pub mod profilering;
 pub mod request;
 pub mod response;
-pub mod response_v2;
