# app/kartlegging-api/src/model/dto/response_v2.rs
@@ -1,10 +1,0 @@
-use crate::model::dto::arbeidssoeker_v2::ArbeidssoekerV2;
-use crate::model::dto::response::PagingResponse;
-use serde::Serialize;
-
-#[derive(Debug, Serialize)]
-#[serde(rename_all = "camelCase")]
-pub struct KartleggingResponse {
-    pub arbeidssoekere: Vec<ArbeidssoekerV2>,
-    pub paging: PagingResponse,
-}
